# Marky

./: .gitignore  CMakeLists.txt  README.md
include/: MarkyFile.h
src/: MarkyFile.cpp  main.cpp
